--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -11,7 +12,58 @@ body {
   
   .clock-container {
     text-align: center;
-    font-size: 3rem;
-    font-weight: bold;
+  }
+  
+  .digital-clock {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  
+  .analog-clock {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border: 5px solid #61dafb;
+    border-radius: 50%;
+    background: #222;
+  }
+  
+  .hand {
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    background-color: #61dafb;
+    top: 50%;
+    left: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: transform 0.1s ease-in-out;
+  }
+  
+  .hour {
+    height: 4px;
+    width: 40%;
+    background-color: #fff;
+  }
+  
+  .minute {
+    height: 3px;
+    width: 45%;
+  }
+  
+  .second {
+    height: 2px;
+    background-color: #ff5555;
+  }
+  
+  .center-dot {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #61dafb;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
